# anonymous-note-service

./: .dockerignore  .flake8  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  test.env
app/: babel.cfg  baseclass.py  config.py  create_fastapi_app.py  db_session.py  errors_handlers.py  exeptions.py  localization.py  main.py  middleware.py  middlewares.py  prestart.sh  requests_count_middleware.py  run_main.py  scheduler.py  utils.py
app/actions/: create_superuser.py
app/admin/: admin_panel.py  auth.py  views.py
app/api/: router.py
app/api/api_v1/: router.py
app/authentication/: access_token.py  messages.py  model.py  models.py  oauth2.py  router.py  service.py  transport.py  user_manager.py
app/authentication/oauth2/: model.py
app/core/: baseclass.py  config.py  db_session.py  lifespan.py  scheduler.py
app/core/gunicorn/: app_options.py  application.py  logger.py
app/core/models/: base.py  db_helper.py
app/core/types/: call_next.py
app/dependencies/: access_tokens.py  backend.py  fastapi_users.py  oauth2.py  strategy.py  user_manager.py  users.py
app/migrations/: env.py
app/migrations/versions/: 23308458fdbb_initial_commit.py  7258c44a2e14_initial_commit.py  d50483d38d2b_initial_commit.py
app/notes/: models.py  router.py  schemas.py  services.py
app/notes/tests/: test_notes.py
app/templates/: hash_storage.html  index.html  note_page.html
app/types/: user_id.py
app/users/: models.py  router.py  schemas.py
app/utils/: async_session.py  case_converter.py  downloading_pictures.py
app/webhooks/: user.py
(+1 files in other folders)
